# Distributed-Attack-Resilient-Platooning-Against-False-Data-Injection

./: .gitignore  README.md  acados_ocp.json  saved_linear_controller_gains.npy  temp_car_order_manager_tests.py
1_simulations_and_tuning/: Kafash_comparison.m  Kafash_functions.py  README.md  Testing_acados_MPC  acados_ocp_platooning.json  classes_definintion.py  comparison_vs_Kafash.py  comparison_vs_Kafash_replicating_their_thing.py  linear_controller_gains.py  platoon_example1_from_Laura.asv  platoon_example1_from_Laura.m  platoon_example1_from_Laura_run_statistics.asv  platoon_example1_from_Laura_run_statistics.m  platooning_simulation.py  platooning_simulation_figures.py  platooning_simulation_run_statistics.py  platooning_simulation_statistics_analysis.py  saved_linear_controller_gains.npy
2_platooning_experiments_data_processing/: 1_platooning_experiments_plotting.py  2_residual_dynamics_plotting.py  4_attack_detection_tuning_on_simulated_attack.py  5_acc_tracking_plot.py  process_CACC_vs_ACC_data.py
Distributed_attack_resilient_platooning/: classes_definintion.py  linear_controller_gains.py  platooning_simulation.py
ROS_packages/platooning_pkg/: CMakeLists.txt  package.xml
ROS_packages/platooning_pkg/launch_files/: platooner.launch
ROS_packages/platooning_pkg/src/: acc_2_throttle.py  communication_node.py  functions_for_controllers.py  lidar_clustering_cpp.cpp  longitudinal_controller.py  relative_state_publisher.py
c_generated_code/: Makefile  acados_sim_solver_double_integrator.c  acados_sim_solver_double_integrator.h  acados_solver.pxd  (+10 more)
(+68248 files in other folders)
